# boxlite_openai_agents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: 01_quickstart.py  02_persist_resume.py  03_manifest.py  04_capabilities.py  05_custom_llm.py  06_orchestration.py  07_function_tool.py  08_guardrails.py  09_tracing.py  10_airgapped.py  README.md
src/boxlite_openai_agents/: __init__.py  client.py  errors.py  manifest_apply.py  options.py  session.py  snapshot.py  state.py
src/boxlite_openai_agents/_internal/: magic.py
tests/: conftest.py  test_custom_llm.py  test_lifecycle.py  test_manifest_apply.py  test_smoke_imports.py
tests/journey/: _creds.py  conftest.py  run_journey.sh  test_journey.py
